--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,11 @@ canvas{
 }
 
 img{
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
+    position: absolute;
+    left: 45%;
+    top: 5%;
 }
 
 .button{
